prod/minikube/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postcard-postgres
spec:
  selector:
    app: postcard-postgres
  ports:
    - protocol: TCP
      port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postcard-postgres
  labels:
    app: postcard-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postcard-postgres
  template:
    metadata:
      labels:
        app: postcard-postgres
    spec:
      containers:
        - name: postcard-postgres
          image: postcard-postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - name: postcard-secret
              mountPath: '/run/secrets/POSTCARD_POSTGRES_PASSWORD'
              readOnly: true
              subPath: POSTCARD_POSTGRES_PASSWORD
      volumes:
        - name: postgres-data
          emptyDir: {}
        - name: postcard-secret
          secret:
            secretName: postcard-secret
            items:
              - key: POSTCARD_POSTGRES_PASSWORD
                path: POSTCARD_POSTGRES_PASSWORD
